# gherkin_generator

./: README.md  pyproject.toml  report_geracao_artefatos_task.md  report_geracao_dados_task.json  report_gherkin.md
src/crew_gherkin/: crew.py  main.py
src/crew_gherkin/config/: agents.yaml  tasks.yaml
